# jules-test

./: README.md  main.py  pyproject.toml
app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_main.py
