[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "ruff>=0.5.5",
  "pytest>=8.0.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint] # Changed from top-level select
select = ["E", "F", "W"]

[tool.ruff.format]
quote-style = "double"
